--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
     <!-- Header Navigation -->
     <header class="fade-in-element">
         <nav>
-            <a href="/index.html">Home</a>
-            <a href="/index.html">About</a>
-            <a href="/index.html">Projects/Skills</a>
-            <a href="/index.html">Work History</a>
-            <a href="/index.html">Contact Me</a>
-            <a href="/music/index.html">Music Career</a>
-            <a href="/blog/index.html">Blog</a>
+            <a href="https://alinasser.info">Home</a>
+            <a href="https://alinasser.info">About</a>
+            <a href="https://alinasser.info">Projects/Skills</a>
+            <a href="https://alinasser.info">Work History</a>
+            <a href="https://alinasser.info">Contact Me</a>
+            <a href="https://music.alinasser.info">Music Career</a>
+            <a href="https://blog.alinasser.info">Blog</a>
         </nav>
     </header>
 
