--- a/index.html
+++ b/index.html
@@ -15,12 +15,7 @@
     <!-- Header Navigation -->
     <header class="fade-in-element">
         <nav>
-            <a href="https://alinasser.info">Home</a>
-            <a href="https://alinasser.info">About</a>
-            <a href="https://alinasser.info">Projects/Skills</a>
-            <a href="https://alinasser.info">Work History</a>
-            <a href="https://alinasser.info">Contact Me</a>
-            <a href="https://music.alinasser.info">Music Career</a>
+            <a href="https://alinasser.info">Portfolio</a>
             <a href="https://blog.alinasser.info">Blog</a>
         </nav>
     </header>
