--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
     <header class="fade-in-element">
         <nav>
             <a href="https://alinasser.info">Portfolio</a>
+            <a href="https://anradio.alinasser.info">Podcast</a>
             <a href="https://blog.alinasser.info">Blog</a>
+            
         </nav>
     </header>
 
